# mis_service

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
alembic/: env.py
alembic/versions/: 1a89f300adf1_auto_migration.py  216f56a128d9_add_surgeries_table_2.py  2865d36f3856_add_patients_and_appointments_tables.py  58c1272fe7f4_upgrade_colum_20.py  85753828fc7c_delete_email.py  8a5abf647178_add_surgeries_table.py  915f6fea8606_add_billing_table.py  a20972001a0c_auto_migration.py  c456bfe52342_add_billing_tables.py  c955712d776e_add_stats_tables.py  d2acbe15e733_initial.py  database_indexes.py  remove_email_from_patients.py
app/: __init__.py  main.py
app/core/: config.py  dependencies.py  events.py  exceptions.py  middleware.py  security.py
app/db/: base.py  session.py
app/modules/appointments/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/auth/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/billing/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/operations/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/patients/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/prescriptions/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/stats/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/visits/: models.py  router.py  (+3 more)
scripts/: generate_secret_key.py
tests/: conftest.py  test_auth.py  test_main.py  test_patients.py
